2012-XX-XX  UnNetHack 4.X.X
	* Mind flayer attacks only cause physical damage and int drain
	* Wands and spells of digging are no longer restricted on maze levels
	* Sokoban luck penalty removed and added tracking of solving Sokoban
	  without any tricks

	* removed monsters:
	  - anti-matter vortex
	* Livelog: report bag of holding explosions

	* New role: Convict class

	* bug fixes:
	  - Fixed crash when player gets killed when entering a new level and
	    a trap on the previous level causes a null pointer dereference
	    when writing the HTML map (related to C343-20).

	* vanilla bug fixes:
	  - Prevent the Book of the Dead from being destroyed when the
	    player falls into lava. (from GruntHack)
	  - Fix security bug in options handler (reported by Matthew Daley,
	    fixed by Pasi Kallinen)

2012-04-01  UnNetHack 4.0.0
	* Uncursed and blessed scrolls of magic mapping reveal secret doors
	* Blessed scrolls of magic mapping reveal objects
	* Dump log: show same information on final dump as wizard mode
	* Minotaurs respect Elbereth
	* Bones level tracking
	* Conduct: Racial armor tracking
	* extra AC point per worn piece of racial armor
	* Reduce occurrences of hint daemon to once per game
	* Automatically identify rings dropped into a sink when message is
	  shown
	* Allow stethoscopes to identify egg types (unless hallucinating)
	  (from SporkHack)
	* Reduce AC of dragon scales to 1 and dragon scale mails to 5
	* Killing your Quest leader opens up the stairs to the lower quest
	  levels (from SporkHack)

	* new branch:
	  - the Dragon Caves (from NetHack Brass R/S)

	* new dungeon features:
	  - muddy swamp (from NetHack Brass)

	* added items:
	  - chromatic dragon scales and scale mail

	* new monsters:
	  - chromatic dragons
	  - wax golems (providing candles as death drop) (from Slash'Em)
	
	* new levels:
	  - Sokoban levels (from GruntHack)

	* bug fixes:
	  - Draw health bar in inverse when color is disabled (reported by
	    Bernard Helyer)